--- a/style.css
+++ b/style.css
@@ -62,3 +62,37 @@
 	padding-right: 10px;
 	padding-left: 10px;
 }
+
+.error {
+	font-size: 18px;
+    font-family: ‘Lucida Console’, Monaco, monospace;
+	color: white;
+}
+
+.black_overlay{
+	display: none;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	z-index:1001;
+	-moz-opacity: 0.8;
+	opacity:.80;
+	filter: alpha(opacity=80);
+}
+.white_content {
+	display: none;
+	position: absolute;
+	top: 25%;
+	left: 25%;
+	width: 10%;
+	height: 10%;
+	padding: 16px;
+	border: 7px solid orange;
+	border-radius: 3px;
+	background-color: white;
+	z-index:1002;
+	overflow: auto;
+}
